Bug 159478 - FILEOPEN: RTF Checkbox Field in symbol encoding not imported
Summary: FILEOPEN: RTF Checkbox Field in symbol encoding not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:24.8.0 target:24.2.1
Keywords:
Depends on:
Blocks: RTF-Fields
  Show dependency treegraph
 
Reported: 2024-01-31 15:30 UTC by Oliver Specht (CIB)
Modified: 2024-02-12 15:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File contains FORMCHECKBOX fields with a symbol font (53.94 KB, application/msword)
2024-01-31 15:30 UTC, Oliver Specht (CIB)
Details
Screenshot (278.66 KB, image/jpeg)
2024-01-31 15:35 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2024-01-31 15:30:53 UTC
Created attachment 192289 [details]
File contains FORMCHECKBOX fields with a symbol font

The attached document contains Checkbox fields that are not correctly imported.
Comment 1 Oliver Specht (CIB) 2024-01-31 15:35:23 UTC
Created attachment 192290 [details]
Screenshot
Comment 2 Gabor Kelemen (Collabora) 2024-02-01 22:34:17 UTC
Confirming in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b39c6082aa975ed8e5696c3dc24c3025ed07bbb6
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2024-02-08 14:20:51 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6eda6afc90eda8f0a424a5e91a2b00f06bbbb3c5

tdf#159478 read field comment in default encoding

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-02-09 07:36:17 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/d37be1f9581a8a02c10c7bd88e83c74e2b46bc75

tdf#159478 read field comment in default encoding

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.