tdf#159478 read field comment in default encoding

If a symbol font is applied inside a field the command string
was wrongly converted as symbol text. This is fixed by using a
default RTL_TEXTENCODING_MS_1252 encoding.

Change-Id: I11326ef3c79d6d74c720a2b4ac4987ee6716d912
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162844
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>